--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon app.js"
     },
     "dependencies": {
+        "amadeus": "^11.0.0",
         "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
         "cheerio": "^1.0.0",
@@ -15,6 +16,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.30.1",
         "mongoose": "^7.0.1"
     },
     "devDependencies": {
