--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "moment": "^2.30.1",
-        "mongoose": "^7.0.1"
+        "mongoose": "^7.0.1",
+        "pdfkit": "^0.15.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
