--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jsonwebtoken": "^9.0.0",
         "moment": "^2.30.1",
         "mongoose": "^7.0.1",
+        "node-cron": "^3.0.3",
         "pdfkit": "^0.15.1"
     },
     "devDependencies": {
