--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "moment": "^2.30.1",
         "mongoose": "^7.0.1",
         "node-cron": "^3.0.3",
-        "pdfkit": "^0.15.1"
+        "pdfkit": "^0.15.1",
+        "stripe": "^17.3.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
