--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "moment": "^2.30.1",
         "mongoose": "^7.0.1",
         "node-cron": "^3.0.3",
+        "nodemailer": "^6.9.16",
         "pdfkit": "^0.15.1",
         "stripe": "^17.3.1"
     },
