--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-session": "^1.18.1",
         "jsonwebtoken": "^9.0.0",
         "moment": "^2.30.1",
         "mongoose": "^7.0.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.16",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "pdfkit": "^0.15.1",
         "stripe": "^17.3.1"
     },
