--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "bcryptjs": "^2.4.3",
         "cheerio": "^1.0.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "express-session": "^1.18.1",
         "jsonwebtoken": "^9.0.0",
@@ -24,6 +24,7 @@
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pdfkit": "^0.15.1",
+        "sib-api-v3-sdk": "^8.5.0",
         "stripe": "^17.3.1"
     },
     "devDependencies": {
